--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <menu class="itens" id="itens">
                <div class="links"> 
                    
-                        <a class="link" href="">Trabalhos</a>
+                        <a class="link" href="trabalhos.html">Trabalhos</a>
                         <a class="link" href="contato.html">Contato</a>
                         <a class="link" href="agenda.html">Agenda</a>
                </div>
@@ -30,18 +30,18 @@
         </div>
     </header>
 
-    <article>
-        <h2 class="somos">Quem Somos</h2>
-
-        <p class="article">Somos um Stúdio de tatuamgem 
-           tendo como tatuadora principal e proprietária <br>
-           Bruna Camargo, realizando um dos seus mairoes sonhos! <br>
-           Desenhando desde pequena e se apixonando por arte <br>
-           E então ela resolveu expressar seus desenhos 
-           e sua arte em forma de tatuagem! 
-        </p>
-      
-            <img id="perfil" src="images/perfil.jpg" alt="">
+    <article class="conteudo">
+        <div class="">
+            <h2 class="somos">Quem Somos</h2>
+            <p class="article">Somos um Stúdio de tatuamgem
+               tendo como tatuadora principal e proprietária <br>
+               Bruna Camargo, realizando um dos seus mairoes sonhos ! <br>
+               Desenhando desde pequena e se apixonando por arte <br>
+               E então ela resolveu expressar seus desenhos
+               e sua arte em forma de tatuagem !
+            </p>
+        </div>
+                <img id="perfil" src="images/perfil.jpg" alt="">
    </article>
 
 <main>
@@ -49,12 +49,14 @@
 
         <p class="main">Estes são alguns dos modelos mais pedidos pelos clientes</p>
 
-      <p class="img" id="img" >
-        <img class="img1" src="sem fundo/images__3_-removebg-preview.png" alt="">
-        <img class="img2" src="sem fundo/images__2_-removebg-preview.png" alt="">
-        <img class="img3" src="sem fundo/download-removebg-preview.png" alt="">
-        <img class="img4" src="sem fundo/download-removebg-preview.png" alt="">
-    </p>
+      <div class="flex">
+          <p class="img" id="img" >
+            <img class="img1" src="sem fundo/images__3_-removebg-preview.png" alt="">
+            <img class="img2" src="sem fundo/images__2_-removebg-preview.png" alt="">
+            <img class="img3" src="sem fundo/download-removebg-preview.png" alt="">
+            <img class="img4" src="sem fundo/download-removebg-preview.png" alt="">
+              </p>
+      </div>
   
 </main>
 
